<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">Emby</string>
    <string name="welcome_title">Welcome to Emby</string>
    <string name="welcome_paragraph">With Emby you can easily stream videos, music and photos to Android and other devices from your Emby Server.</string>
    <string name="welcome_server_download_address">To download and install Emby Server visit http://emby.media</string>
    <string name="next_button_text">Next</string>
    <string name="title_activity_main">Emby</string>
    <string name="mb_connect_welcome_text_with_url">With <a href='http://emby.media/connect/'>Emby Connect</a> you can easily access your Emby Server wherever you are and share with your family and friends.</string>
    <string name="mb_connect_pin_entry_url_paragraph">To sign in with Emby Connect, visit http://emby.media/pin and enter the following pin code:</string>
    <string name="mb_connect_sign_in_header">Sign in with Emby Connect</string>
    <string name="sign_in_button_text">Sign In</string>
    <string name="skip_button_text">Skip</string>
    <string name="manual_connection_text">Connect to my server manually</string>
    <string name="play_all_action_bar_button">Play All</string>
    <string name="shuffle_action_bar_button">Shuffle</string>
    <string name="favorite_action_bar_button">Set Favorite</string>
    <string name="un_favorite_action_bar_button">Remove Favorite</string>
    <string name="played_action_bar_button">Set Played</string>
    <string name="un_played_action_bar_button">Remove Played</string>
    <string name="instant_mix_string">Instant Mix</string>
    <string name="overview_header">Overview</string>
    <string name="seasons_header">Seasons</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="save">Save</string>
    <string name="restart_button">Restart</string>
    <string name="warning_string">Warning</string>
    <string name="proceed_button">Proceed</string>
    <string name="playlist_string">Playlist</string>
    <string name="like_string">Like</string>
    <string name="dislike_string">Dislike</string>
    <string name="clear_rating_string">Clear Rating</string>
    <string name="playlist_add_string">Add to Playlist</string>
    <string name="playlist_remove_string">Remove from Playlist</string>
    <string name="playlist_clear_string">clear playlist</string>
    <string name="first_run_introduction">Since this is your first time using Emby for Android, we\'re going to try and configure everything automatically for you.</string>
    <string name="first_run_single_discovered_server">The following server was found. Press to connect or long-press to change values.</string>
    <string name="first_run_multi_discovered_servers">The following servers have been found. Select the one you\'d like to connect to or long-press to change values.</string>
    <string name="first_run_no_servers_found">No Emby servers could be located. Click the Add Connection button to manually add your server.</string>
    <string name="first_run_connection_description">Enter the address of the server to connect to. Supported address formats are:</string>
    <string name="first_run_connection_error">Unable to connect to server</string>
    <string name="add_connection_dialog_title">Add new connection</string>
    <string name="message_searching">Searching for servers</string>
    <string name="message_contacting">Contacting</string>
    <string name="message_contacting_wan">Attempting using WAN address</string>
    <string name="message_requesting_users">Requesting users</string>
    <string name="message_authenticating">Authenticating</string>
    <string name="add_connection">Add Connection</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="change_server">Change Server</string>
    <string name="select_mb_server">Select an Emby server</string>
    <string name="connected">connected</string>
    <string name="manual_login">Manual Login</string>
    <string name="select_mb_user">Select a User</string>
    <string name="last_seen">Last Seen</string>
    <string name="unknown">Unknown</string>
    <string name="request_credentials_description">Please enter credentials to login</string>
    <string name="username_string">Username</string>
    <string name="pin_hint">password</string>
    <string name="login_dialog_description">Please enter password for</string>
    <string name="log_out_text">Click to log out</string>
    <string name="menu_home">Home</string>
    <string name="settings_action_bar_button">Settings</string>
    <string name="news_action_bar_button">News</string>
    <string name="movies_header">Movies</string>
    <string name="tv_header">TV</string>
    <string name="music_header">Music</string>
    <string name="games_header">Games</string>
    <string name="live_tv_header">Live TV</string>
    <string name="channels_header">Channels</string>
    <string name="favorites_header">Favorites</string>
    <string name="new_header">Latest</string>
    <string name="next_up_header">Next Up</string>
    <string name="resume_header">Resume</string>
    <string name="library_header">My Media</string>
    <string name="added_on_date">Added on %s</string>
    <string name="actors_header">Actors</string>
    <string name="play_action_bar_button">Play</string>
    <string name="language_action_bar_button">Audio and Subtitle Settings</string>
    <string name="resume_action_bar_button">Resume</string>
    <string name="trailer_action_bar_button">Play Trailer</string>
    <string name="remote_play_action_bar_button">Remote Play</string>
    <string name="popup_resume_title">Resume point available</string>
    <string name="popup_play">Play from beginning</string>
    <string name="popup_resume">Resume from %s</string>
    <string name="audio_stream_selection">Select audio stream</string>
    <string name="subtitle_stream_selection">Select subtitle stream</string>
    <string name="bitrate_selection">Select maximum bitrate</string>
    <string name="toggle_media_info">Show media info</string>
    <string name="bio_header">Bio</string>
    <string name="media_header">Media</string>
    <string name="airs_string">Airs</string>
    <string name="aired_string">Aired</string>
    <string name="at_string">at</string>
    <string name="links_string">links</string>
    <string name="on_stage_string">On Stage</string>
    <string name="artist_string">Artist</string>
    <string name="albums_header">Albums</string>
    <string name="songs_string">Songs</string>
    <string name="genres_string">Genres</string>
    <string name="rotten_tomatoes_title">Rotten Tomatoes</string>
    <string name="click_full_review">Touch for full review</string>
    <string name="remote_control_title_string">Remote Control</string>
    <string name="clients_string">Clients</string>
    <string name="queue_string">Queue</string>
    <string name="play_now_string">Play now</string>
    <string name="play_next_string">Play next</string>
    <string name="play_last_string">Play last</string>
    <string name="timeline_string">Timeline</string>
    <string name="play_from_beginning_string">Play from beginning</string>
    <string name="resume_from_string">Resume from</string>
    <string name="order_string">Order</string>
    <string name="play_all_string">Play all</string>
    <string name="shuffle_string">Shuffle</string>
    <string name="ip_address">Address</string>
    <string name="port">Port</string>
    <string name="port_value">8096</string>
    <string name="ip_hint">192.168.0.10</string>
    <string name="settings_media_server">Media Server</string>
    <string name="settings_manage_connections">Manage Connections</string>
    <string name="settings_manage_connections_summary">Click to manage connections</string>
    <string name="settings_general">General</string>
    <string name="settings_homescreen">Homescreen</string>
    <string name="settings_default_homescreen">Default Homescreen</string>
    <string name="settings_default_homescreen_summary">This is the default tab that will be shown for the homescreen</string>
    <string name="settings_show_collection_name">Show Collection Name</string>
    <string name="settings_show_collection_name_summary_on">Collection name is shown</string>
    <string name="settings_show_collection_name_summary_off">Collection name will not be shown</string>
    <string name="settings_library">Library</string>
    <string name="settings_library_summary">Configure setting that affect what info is shown in library views</string>
    <string name="settings_prefer_posters">Prefer Posters</string>
    <string name="settings_prefer_posters_summary_off">Thumbs will be shown in library views</string>
    <string name="settings_prefer_posters_summary_on">Posters will be shown in library views</string>
    <string name="settings_theme_songs">Enable Theme Songs</string>
    <string name="settings_theme_songs_summary_off">Theme songs will not be played</string>
    <string name="settings_theme_songs_summary_on">Theme songs will be played</string>
    <string name="settings_playback">Playback</string>
    <string name="settings_playback_summary">Select a bitrate used for each scenario. Higher is better. (Performance depends on server specifications and available connection speed)</string>
    <string name="settings_hls">HLS Support</string>
    <string name="settings_hls_summary_off">HLS disabled</string>
    <string name="settings_hls_summary_on">HLS enabled</string>
    <string name="settings_lan_title">LAN/WIFI</string>
    <string name="settings_lan_summary">Specify the bitrate used when playing over LAN or Wifi.</string>
    <string name="settings_lan_dialog">Local Playback Bitrate</string>
    <string name="settings_cellular_title">Cellular</string>
    <string name="settings_cellular_summary">Specify the bitrate used when playing over 3G/4G.</string>
    <string name="settings_cellular_dialog">Cellular Playback Bitrate</string>
    <string name="settings_chromecast_title">Chromecast</string>
    <string name="settings_chromecast_summary">Specify the bitrate used when casting to Chromecast.</string>
    <string name="settings_chromecast_dialog">Chromecast Playback Bitrate</string>
    <string name="settings_external_player">External Player</string>
    <string name="settings_external_player_summary_on">External player will be used</string>
    <string name="settings_external_player_summary_off">Use internal player</string>
    <string name="settings_info">Info</string>
    <string name="settings_about">About</string>
    <string name="settings_subtitle_header">Subtitle Size</string>
    <string name="settings_subtitle_description">Define the text size when subtitles are displayed. Has no effect on subtitles burned into the video</string>
    <string name="settings_server_image_enhancers">Image Enhancers</string>
    <string name="settings_image_enhancers_summary_on">Server image enhancers will be used</string>
    <string name="settings_image_enhancers_summary_off">Server image enhancers will not be used</string>
    <string name="ltv_record_series">Record Series</string>
    <string name="ltv_days">Days</string>
    <string name="ltv_frequency">Frequency</string>
    <string name="ltv_record_only_new">Record only new episodes</string>
    <string name="ltv_record_anytime">Record program at any time</string>
    <string name="ltv_record_all_channels">Record program on all channels</string>
    <string name="ltv_pre_post_padding">Pre/Post Padding</string>
    <string name="ltv_pre_padding_required">Pre-padding is required</string>
    <string name="ltv_pre_padding_minutes">Pre-padding minutes</string>
    <string name="ltv_post_padding_required">Post-padding is required</string>
    <string name="ltv_post_padding_minutes">Post-padding minutes</string>
</resources>