<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="4dp"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clients_string"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <RadioGroup
        android:id="@+id/rgAvailableClients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"></RadioGroup>

    <LinearLayout
        android:id="@+id/llQueueOptions"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvSeriesViewAiringInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/queue_string"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <RadioGroup
            android:id="@+id/rgPlaybackCommands"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbPlayNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:tag="0"
                android:text="@string/play_now_string" />

            <RadioButton
                android:id="@+id/rbPlayNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:tag="1"
                android:text="@string/play_next_string" />

            <RadioButton
                android:id="@+id/rbPlayLast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:tag="2"
                android:text="@string/play_last_string" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llTimelineContainer"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="15dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timeline_string"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <RadioGroup
            android:id="@+id/rgTimeline"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <RadioButton
                android:id="@+id/rbPlayFromStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/play_from_beginning_string"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/rbResume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resume_from_string"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llMusicContainer"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_string"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <RadioGroup
            android:id="@+id/rgPlaybackOptions"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <RadioButton
                android:id="@+id/rbPlayAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/play_all_string"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/rbShuffle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shuffle_string"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </RadioGroup>
    </LinearLayout>

</LinearLayout>