<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".model.ServerConnectionDialogFragment">

    <TextView
        android:id="@+id/tvServerConnectionDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_run_connection_description"
        android:textSize="20sp"
        android:layout_margin="8dp" />

    <TextView
        android:id="@+id/tvServerSamples"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="http://192.168.0.10 or http://home.mydns.org"
        android:textSize="16sp"
        android:layout_margin="8dp"
        android:alpha=".7"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dip"
        android:baselineAligned="false">

        <TextView
            android:id="@+id/row_title"
            android:layout_width="150dip"
            android:layout_height="wrap_content"
            android:text="@string/ip_address"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etHostName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/ip_hint"
            android:inputType="textUri" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dip"
        android:baselineAligned="false">

        <TextView
            android:id="@+id/textView"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/port"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/etPortValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:text="@string/port_value"
            android:hint="@string/port_value"
            android:inputType="number" />
    </LinearLayout>

</LinearLayout>